@@ -766,23 +766,31 @@ proc plus-pkgs {type args} {
     if {!$build_tcl} return
     set result {}
     foreach {dir name} $args {
-	set globpat $tcltkdir/$tcldir/pkgs/$dir/doc/*.$type
+	set globpat $tcltkdir/$tcldir/pkgs/$dir*/doc/*.$type
 	if {![llength [glob -nocomplain $globpat]]} {
 	    # Fallback for manpages generated using doctools
-	    set globpat $tcltkdir/$tcldir/pkgs/$dir/doc/man/*.$type
+	    set globpat $tcltkdir/$tcldir/pkgs/$dir*/doc/man/*.$type
 	    if {![llength [glob -nocomplain $globpat]]} {
 		continue
 	    }
 	}
+	regexp "pkgs/$dir(.*)/doc$" [glob $tcltkdir/$tcldir/pkgs/$dir*/doc] \
+	    -> version
 	switch $type {
 	    n {
 		set title "$name Package Commands"
+		if {$version ne ""} {
+		    append title ", version $version"
+		}
 		set dir [string totitle $dir]Cmd
 		set desc \
 		    "The additional commands provided by the $name package."
 	    }
 	    3 {
 		set title "$name Package Library"
+		if {$version ne ""} {
+		    append title ", version $version"
+		}
 		set dir [string totitle $dir]Lib
 		set desc \
 		    "The additional C functions provided by the $name package."
@@ -945,8 +953,8 @@ try {
 	append appdir "$tkdir"
     }
 
-    # Get the list of packages to try, and what their human-readable
-    # names are.
+    # Get the list of packages to try, and what their human-readable names
+    # are. Note that the package directory list should be version-less.
     try {
 	set packageDirNameMap {}
 	if {$build_tcl} {
